rpi-imager (1.6) unstable; urgency=medium

  * Wayland: fix "Client tried to set invalid geometry" error
  * Add advanced users option screen available under SHIFT-CTRL-X

 -- Floris Bos <bos@je-eigen-domein.nl>  Fri, 15 Jan 2021 22:00:21 +0100

rpi-imager (1.5) unstable; urgency=medium

  * More verbose progress/error reporting
  * Reconnect if download stalls for more than one minute
  * Remember last selected custom image path
  * Add German/French/Italian/Slovak/Turkish translations
  * Fix multi-level subitems_url
  * Add update notification support
  * Allow translators to specify external .qm file for testing
  * Remove dependency on qml-module-qt-labs-settings
  * Enables telemetry collecting information about which images from
    repository are most popular

 -- Floris Bos <bos@je-eigen-domein.nl>  Tue, 24 Nov 2020 10:38:21 +0100

rpi-imager (1.4) unstable; urgency=medium

  * Add basic accessibility support
  * Add keyboard navigation support
  * Linux: do not let progress exceed 100% if
    device reports incorrect write counters
  * Show new SD card size if SD card is replaced
  * Linux: do not use direct IO on verifying but purge cache with
    posix_fadvise()

 -- Floris Bos <bos@je-eigen-domein.nl>  Tue, 30 Jun 2020 00:29:37 +0200

rpi-imager (1.3) unstable; urgency=medium

  * Remove zero sized drives from list
  * Fix height of drive list
  * Show scrollbars permanently
  * Add localisation support
  * Use accelerated sha256 code provided by OpenSSL
  * Custom user agent
  * Ask for confirmation on quit
  * Use direct IO on verifying
  * Improve progress indication

 -- Floris Bos <bos@je-eigen-domein.nl>  Mon, 25 May 2020 00:45:50 +0200

rpi-imager (1.2) unstable; urgency=medium

  * Mention version number in title bar.
  * Performance improvements

 -- Floris Bos <bos@je-eigen-domein.nl>  Tue, 10 Mar 2020 17:08:11 +0100

rpi-imager (1.1) unstable; urgency=medium

  * Fix verification on images that are uncompressed or have